--- a/3_events.html
+++ b/3_events.html
@@ -57,45 +57,62 @@
       </div>
     </div>
   <br>
+
 <div class="w3-container">
   <h2>Floral & Event Decor</h2>
-
   <h3>Four-Time ISES Award Winners for Best Floral & Best Non-Profit Event.</h3>
-
-  <p class="padding">We are known for our award-winning floral and event decor, creative themes, and concierge-like
-  service for events of all sizes. We create a unique and inspiring event decor theme and align
-  it to every detail such as flowers, linens, signage and lighting. We want our clients to have a WOW
-  moment when they enter their event.</p>
+  <div class="leftcolumn">
+      <p>We are known for our award-winning floral and event decor, creative themes, and concierge-like
+      service for events of all sizes. We create a unique and inspiring event decor theme and align
+      it to every detail such as flowers, linens, signage and lighting. We want our clients to have a WOW
+      moment when they enter their event.</p>
+</div>
+<div class="rightcolumn">
+<br><a href="https://www.hautehousestudio.com/events" class="button">EXPLORE DECOR</a>
+</div>
+</div>
 
   <br>
-
+<div class="w3-container">
   <h2>Haute House Event Planning</h2>
-
   <h3>One call to Haute House Studio can make your event as memorable as it is effortless.</h3>
+  <div class="leftcolumn">
+    <p>Our ability to be highly creative and uber-organized all at the same time is unsurpassed.
+      Your event - large or small - is our priority. From large fundraising galas, to elegant at-home affairs,
+      to corporate functions, we will assure that our concierge-like attention to detail goes to work for you.
+      We can assist with a multitude of items including venue search, invitation design, floral centerpieces,
+      event decor, linen and event rentals, catering selection, and full service audio-visual production.
+      We are based in the Minneapolis-St. Paul area, with a studio in Edina, and we travel on location to all
+      points beyond - with clients in California, Chicago, Vail, Scottsdale, Seattle, and more.</p>
+</div>
+<div class="rightcolumn">
+<br><a href="https://www.hautehousestudio.com/contact" class="button">CONTACT US</a>
+</div>
+</div>
 
-  <p class="padding">Our ability to be highly creative and uber-organized all at the same time is unsurpassed.
-    Your event - large or small - is our priority. From large fundraising galas, to elegant at-home affairs,
-    to corporate functions, we will assure that our concierge-like attention to detail goes to work for you.
-    We can assist with a multitude of items including venue search, invitation design, floral centerpieces,
-    event decor, linen and event rentals, catering selection, and full service audio-visual production.
-    We are based in the Minneapolis-St. Paul area, with a studio in Edina, and we travel on location to all
-    points beyond - with clients in California, Chicago, Vail, Scottsdale, Seattle, and more.</p>
-
+</div>
 <br>
 
-    <h2>Workshops</h2>
-    <h3>Building community through creativity.</h3>
-    <p class="padding">Haute House Studio is introducing new studio workshops and private events
-      that teach the art of floral design and celebrate creativity in our spacious and bright creative space.
-      Contact us to organize your private event. We've done can teach you everything about holiday centerpieces,
-      entertaining how-tos, and we're even hosting our FIRST-EVER Santa's Workshop!<p>
+<div class="w3-container">
+        <h2>Workshops</h2>
+            <h3>Building community through creativity.</h3>
+            <div class="leftcolumn">
+                <p>Haute House Studio is introducing new studio workshops and private events
+                  that teach the art of floral design and celebrate creativity in our spacious and bright creative space.
+                  Contact us to organize your private event. We've done can teach you everything about holiday centerpieces,
+                  entertaining how-tos, and we're even hosting our FIRST-EVER Santa's Workshop!<p>
+      </div>
+      <div class="rightcolumn">
+        <br><a href="https://www.hautehousestudio.com/workshops" class="button">LEARN MORE</a>
+      </div>
+</div>
 
     <div class="row">
       <div class="column">
-        <img src="bigtree.png" alt="upside down christmas tree" style="width:100%">
+        <img src="eventdark.jpg" alt="classy event" style="width:100%">
       </div>
       <div class="column">
-        <img src="colorwreath.jpg" alt="colorful wreath" style="width:100%">
+        <img src="brightparty.jpg" alt="bright party" style="width:100%">
       </div>
     </div>
 </div>
