about page finished
added logo and m/b

--- a/1-1_team.html
+++ b/1-1_team.html
@@ -64,11 +64,31 @@ We are known for our energy, enthusiasm, creativity, and attention to detail. We
 clients on a personal level, understand your vision, and then bring that vision to life in an amazing
 and memorable way.</p>
 
-<p class="padding">Meet the fantastically talented team behind our WOW-worthy floral and events...
-<br><a href="https://www.hautehousestudio.com/ourteam" class="button">THE TEAM</a></p>
+<div class="leftcolumn">
+  <p>Meet the fantastically talented team behind our WOW-worthy floral and events...</p><br>
 </div>
-  <br>
-  <br>
+<div class="rightcolumn">
+<a href="https://www.hautehousestudio.com/ourteam" class="button">THE TEAM</a><br>
+</div>
+
+<div class="leftcolumn">
+<p>Learn more about the Haute style and beliefs.</p><br>
+</div>
+<div class="rightcolumn">
+<a href="https://www.hautehousestudio.com/about-us" class="button">THE HAUTE GIRL</a>
+
+</div>
+</div>
+
+<div class="row">
+  <div class="column">
+    <br><img src="mb.jpg" alt="Marsha and Bridget" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="logo.png" alt="Haute House logo" style="width:100%">
+  </div>
+</div>
+
   <br>
 
   <div class="footer">
