finished market and update index

--- a/2_market.html
+++ b/2_market.html
@@ -56,6 +56,40 @@
       </div>
     </div>
   <br>
+<h1>Visit our market to find your inspiration.</h1>
+<div class="w3-container">
+<p class="padding">We're celebrating our brand new studio space with something special this year.
+Our FIRST-EVER holiday market features local handmade gifts for all the important people in your
+life. From jewelry to candles to wallets and even beautiful decor, we have it all.</p>
+
+<p class="padding">Our studio space will also feature an ideas house with each room displaying a
+  different theme for your home. Find your style or let us do it for you.</p>
+  <div>
+
+<div class="row">
+  <div class="column" style="font-family: Georgia, serif;">
+      <h2>Thursday, December 5, 2019
+      <br>11AM-1:30PM
+      <br>5PM-7:30PM<h2>
+  </div>
+  <div class="column" style="font-family: Georgia, serif;">
+      <h2>Thursday, December 5, 2019
+      <br>11AM-1:30PM
+      <br>5PM-7:30PM</h2>
+  </div>
+</div>
+
+<div class="row">
+  <div class="column">
+    <br><img src="blackcandle.jpg" alt="black candle" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="joy.jpg" alt="joy decoration" style="width:100%">
+  </div>
+</div>
+
+
+
 
 <br>
 <br>
