bridget's updates pt 1
"holiday"
word changes
added vendor column (css and events)
holiday decor

--- a/2_market.html
+++ b/2_market.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-  <title>HOLIDAY MARKET - HAUTE HOLIDAYS</title>
+  <title>HOLIDAY MARKET - HAUTE HOLIDAY</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
@@ -10,12 +10,13 @@
     <div
       id="navbar"
       class="topnav">
-        <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">HAUTE HOLIDAYS</a>
+        <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">HAUTE HOLIDAY</a>
           <div class="topnav-right">
+              <a href="https://kehanson14.github.io/Haute_Holidays/index.html" class="w3-bar-item w3-button w3-mobile">HOME</a>
         <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="w3-bar-item w3-button w3-mobile">ABOUT</a>
         <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY MARKET</a>
         <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="w3-bar-item w3-button w3-mobile">PRIVATE EVENTS</a>
-        <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="w3-bar-item w3-button w3-mobile">FRESH DECOR</a>
+        <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY DECOR</a>
         <a href="https://www.hautehousestudio.com/contact" class="w3-bar-item w3-button w3-mobile">CONTACT</a>
           </div>
     </div>
@@ -56,40 +57,122 @@
       </div>
     </div>
   <br>
-<h1>Visit our market to find your inspiration.</h1>
+<h1>'Tis the season ...
+  <br>to shop, give, and be inspired.</h1>
 <div class="w3-container">
-<p class="padding">We're celebrating our brand new studio space with something special this year.
-Our FIRST-EVER holiday market features local handmade gifts for all the important people in your
-life. From jewelry to candles to wallets and even beautiful decor, we have it all.</p>
+<p class="padding">Join us at our FIRST annual Haute Holiday Market! Sip on a relaxing beverage
+  and shop local products created by some of the best and most talented Minnesota makers.
+  Jewelry, candles, decor, and more--we have it all.</p>
 
-<p class="padding">Our studio space will also feature an ideas house with each room displaying a
-  different theme for your home. Find your style or let us do it for you.</p>
+<p class="padding"> Our studio will also be bedazzled with current, on-trend holiday designs.
+  Find your style for your home or let us do it for you.</p>
+
+  <p class="padding"> Leave feeling festive, inspired, and full of joy after experiencing this
+    new local event.</p>
   <div>
 
+    <div class="row">
+      <div class="column">
+        <br><img src="blackcandle.jpg" alt="black candle" style="width:100%">
+      </div>
+      <div class="column">
+        <img src="joy.jpg" alt="joy decoration" style="width:100%">
+      </div>
+    </div>
+
 <div class="row">
   <div class="column" style="font-family: Georgia, serif;">
-      <h2>Thursday, December 5, 2019
-      <br>11AM-1:30PM
-      <br>5PM-7:30PM<h2>
+      <h2>Wednesday, December 4, 2019
+      <br>11AM-1PM
+      <br>5:30PM-7:30PM</h2>
   </div>
   <div class="column" style="font-family: Georgia, serif;">
-      <h2>Thursday, December 5, 2019
-      <br>11AM-1:30PM
-      <br>5PM-7:30PM</h2>
+      <h2>Wednesday, December 11, 2019
+      <br>11AM-1PM
+      <br>5:30PM-7:30PM</h2>
   </div>
 </div>
 
 <div class="row">
-  <div class="column">
-    <br><img src="blackcandle.jpg" alt="black candle" style="width:100%">
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3>Haute House Studio</h3>
+      <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
   </div>
-  <div class="column">
-    <img src="joy.jpg" alt="joy decoration" style="width:100%">
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3>Mary Jane Studio</h3>
+      <p></p>
+  </div>
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3>Haute House Studio</h3>
+      <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
+  </div>
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3>Alice</h3>
+      <p></p>
   </div>
 </div>
 
+<div class="row">
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3>Edina Spiritwear</h3>
+      <p></p>
+  </div>
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3>Namakan Fur</h3>
+      <p></p>
+  </div>
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3>KT Design</h3>
+      <p></p>
+  </div>
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3>Jessica Matrasko Jewelry</h3>
+      <p></p>
+  </div>
+</div>
 
+<div class="row">
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3>Noon Day</h3>
+      <p></p>
+  </div>
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3>Num Nuts</h3>
+      <p></p>
+  </div>
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3>Freak Flag Foods</h3>
+      <p></p>
+  </div>
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3>Num Nuts</h3>
+      <p></p>
+  </div>
+</div>
 
+<div class="row">
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3>Freak Flag Foods</h3>
+      <p></p>
+  </div>
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3></h3>
+      <p></p>
+  </div>
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3></h3>
+      <p></p>
+  </div>
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3></h3>
+      <p></p>
+  </div>
+</div>
+
+<div class="w3-container">
+<p class="padding">Sponsors
+                <br>Stickney Hill Dairy</p>
+  <div>
 
 <br>
 <br>
