--- a/3_events.html
+++ b/3_events.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-  <title>EVENTS - HAUTE HOLIDAYS</title>
+  <title>EVENTS - HAUTE HOLIDAY</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
@@ -10,12 +10,13 @@
     <div
       id="navbar"
       class="topnav">
-        <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">HAUTE HOLIDAYS</a>
+        <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">HAUTE HOLIDAY</a>
           <div class="topnav-right">
+        <a href="https://kehanson14.github.io/Haute_Holidays/index.html" class="w3-bar-item w3-button w3-mobile">HOME</a>
         <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="w3-bar-item w3-button w3-mobile">ABOUT</a>
         <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY MARKET</a>
         <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="w3-bar-item w3-button w3-mobile">PRIVATE EVENTS</a>
-        <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="w3-bar-item w3-button w3-mobile">FRESH DECOR</a>
+        <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY DECOR</a>
         <a href="https://www.hautehousestudio.com/contact" class="w3-bar-item w3-button w3-mobile">CONTACT</a>
           </div>
     </div>
@@ -53,7 +54,7 @@
 
     <div class="hero-image">
       <div class="hero-text">
-        <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>PRIVATE EVENTS</strong></h1>
+        <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>EVENTS</strong></h1>
       </div>
     </div>
   <br>
@@ -64,7 +65,7 @@
   <div class="leftcolumn">
       <p>We are known for our award-winning floral and event decor, creative themes, and concierge-like
       service for events of all sizes. We create a unique and inspiring event decor theme and align
-      it to every detail such as flowers, linens, signage and lighting. We want our clients to have a WOW
+      it to every detail such as flowers, linens, signage, and lighting. We want our clients to have a WOW
       moment when they enter their event.</p>
 </div>
 <div class="rightcolumn">
@@ -94,7 +95,7 @@
 <br>
 
 <div class="w3-container">
-        <h2>Workshops</h2>
+        <h2>Private Workshops</h2>
             <h3>Building community through creativity.</h3>
             <div class="leftcolumn">
                 <p>Haute House Studio is introducing new studio workshops and private events
