--- a/5_order.html
+++ b/5_order.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-  <title>FRESH DECOR - HAUTE HOLIDAYS</title>
+  <title>FRESH DECOR - HAUTE HOLIDAY</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
@@ -10,12 +10,13 @@
     <div
       id="navbar"
       class="topnav">
-        <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">HAUTE HOLIDAYS</a>
+        <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">HAUTE HOLIDAY</a>
           <div class="topnav-right">
+          <a href="https://kehanson14.github.io/Haute_Holidays/index.html" class="w3-bar-item w3-button w3-mobile">HOME</a>
         <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="w3-bar-item w3-button w3-mobile">ABOUT</a>
         <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY MARKET</a>
         <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="w3-bar-item w3-button w3-mobile">PRIVATE EVENTS</a>
-        <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="w3-bar-item w3-button w3-mobile">FRESH DECOR</a>
+        <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY DECOR</a>
         <a href="https://www.hautehousestudio.com/contact" class="w3-bar-item w3-button w3-mobile">CONTACT</a>
           </div>
     </div>
@@ -52,7 +53,7 @@
 
     <div class="hero-image">
       <div class="hero-text">
-        <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>FRESH DECOR</strong></h1>
+        <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>HOLIDAY DECOR</strong></h1>
       </div>
     </div>
   <br>
