--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!doctype html>
 <head>
-  <title>HAUTE HOLIDAYS by Haute House Studio </title>
+  <title>HAUTE HOLIDAY by Haute House Studio </title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
@@ -11,12 +11,13 @@
 <div
   id="navbar"
   class="topnav">
-    <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">HAUTE HOLIDAYS</a>
+    <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">HAUTE HOLIDAY</a>
       <div class="topnav-right">
+    <a href="https://kehanson14.github.io/Haute_Holidays/index.html" class="w3-bar-item w3-button w3-mobile">HOME</a>
     <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="w3-bar-item w3-button w3-mobile">ABOUT</a>
     <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY MARKET</a>
     <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="w3-bar-item w3-button w3-mobile">PRIVATE EVENTS</a>
-    <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="w3-bar-item w3-button w3-mobile">FRESH DECOR</a>
+    <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY DECOR</a>
     <a href="https://www.hautehousestudio.com/contact" class="w3-bar-item w3-button w3-mobile">CONTACT</a>
       </div>
 </div>
@@ -53,7 +54,7 @@ h2 {font-family: Georgia, serif;}
 
 <div class="hero-image">
   <div class="hero-text">
-    <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>HAUTE HOLIDAYS</strong></h1>
+    <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>HAUTE HOLIDAY</strong></h1>
     <h2 style="font-family: Arial, Helvetica, sans-serif;">by
         <br>Haute House Studio</h2>
   </div>
@@ -65,21 +66,6 @@ h2 {font-family: Georgia, serif;}
 
 <br>
 
-  <div class="w3-container">
-    <h2>ABOUT</h2>
-      <div class="leftcolumn">
-        <p>Haute Holidays is a winter-holiday-themed branch of Haute House Studio,
-        a floral, design, and event planning boutique in Edina, MN.</p>
-        <p>Learn more about us and see what we can do below.</p>
-        <br>
-      </div>
-
-      <div class="rightcolumn">
-        <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="button">TEAM / VALUES / HISTORY</a>
-        <br><a href="https://hautehousestudio.com" class="button">HOME SITE</a>
-      <br>
-    </div>
-    </div>
 
     <div class="row">
       <div class="imgcolumn">
@@ -99,7 +85,7 @@ h2 {font-family: Georgia, serif;}
   <div class="w3-container">
     <h2>HOLIDAY MARKET &amp; IDEAS HOUSE</h2>
 
-       <div class="leftcolumn"><h3>Local gifts made with love for those you love.</h3>
+       <div class="leftcolumn"><h3>Local gifts made with love to celebrate those you love.</h3>
           <p>In-studio and online throughout December.</p>
       </div>
 
@@ -129,11 +115,11 @@ h2 {font-family: Georgia, serif;}
 <br>
 
   <div class="w3-container">
-    <h2>PRIVATE EVENTS</h2>
-      <h3>Event Planning, Event Design &amp; Team-building Workshops</h3>
+    <h2>EVENTS</h2>
+      <h3>Private Events, Event Planning, &amp; Team-building Workshops</h3>
         <div class="leftcolumn">
           <p>Spread the joy this holiday season by saying "thank you" to those who have helped you grow this year.</p>
-          <p>Corporate, nonprofit, in-home, or in-studio--your event becomes our priority.</p>
+          <p>Corporate, nonprofit, in-home, or in-studio--enjoy your event without any stress (or mess!).</p>
         </div>
 
         <div class="rightcolumn">
@@ -159,7 +145,7 @@ h2 {font-family: Georgia, serif;}
 <br>
 
   <div class="w3-container">
-    <h2>FRESH DECOR</h2>
+    <h2>HOLIDAY DECOR</h2>
       <div class="leftcolumn">
         <p>Centerpieces, mantels, tree decor, and more curated specially for your space.
         Or, spread the cheer and show gratitude to someone you love.</p>
@@ -184,7 +170,6 @@ h2 {font-family: Georgia, serif;}
   </div>
   </div>
 
-<br>
 <br>
 
 
