--- a/1-1_team.html
+++ b/1-1_team.html
@@ -1,7 +1,7 @@
 
 <!doctype html>
 <head>
-  <title>ABOUT US - HAUTE HOLIDAYS</title>
+  <title>ABOUT US - HAUTE HOLIDAY</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
@@ -11,12 +11,13 @@
   <div
     id="navbar"
     class="topnav">
-      <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">HAUTE HOLIDAYS</a>
+      <a class="active" href="https://kehanson14.github.io/Haute_Holidays/index.html">HAUTE HOLIDAY</a>
         <div class="topnav-right">
+            <a href="https://kehanson14.github.io/Haute_Holidays/index.html" class="w3-bar-item w3-button w3-mobile">HOME</a>
       <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="w3-bar-item w3-button w3-mobile">ABOUT</a>
       <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY MARKET</a>
       <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="w3-bar-item w3-button w3-mobile">PRIVATE EVENTS</a>
-      <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="w3-bar-item w3-button w3-mobile">FRESH DECOR</a>
+      <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY DECOR</a>
       <a href="https://www.hautehousestudio.com/contact" class="w3-bar-item w3-button w3-mobile">CONTACT</a>
         </div>
   </div>
@@ -65,29 +66,13 @@ clients on a personal level, understand your vision, and then bring that vision 
 and memorable way.</p>
 
 <div class="leftcolumn">
-  <p>Meet the fantastically talented team behind our WOW-worthy floral and events...</p><br>
-</div>
-<div class="rightcolumn">
-<a href="https://www.hautehousestudio.com/ourteam" class="button">THE TEAM</a><br>
+  <p>Meet the leaders behind our WOW-worthy floral and events...</p><br>
 </div>
 
-<div class="leftcolumn">
-<p>Learn more about the Haute style and beliefs.</p><br>
-</div>
-<div class="rightcolumn">
-<a href="https://www.hautehousestudio.com/about-us" class="button">THE HAUTE GIRL</a>
 
-</div>
-</div>
 
-<div class="row">
-  <div class="column">
-    <br><img src="mb.jpg" alt="Marsha and Bridget" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="logo.png" alt="Haute House logo" style="width:100%">
-  </div>
-</div>
+
+
 
   <br>
 
