--- a/0_haute_holidays.html
+++ b/0_haute_holidays.html
@@ -61,7 +61,7 @@ h2 {font-family: Georgia, serif;}
 </div>
 
 <div>
-<h1> inspire. celebrate. create.
+<h1 style="font-family: Puzzled_2.ttf;"> inspire. celebrate. create.
 </div>
 
 <br>
