--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ h2 {font-family: Georgia, serif;}
 </div>
 
 <div>
-<h1> inspire. celebrate. create.
+<h1 class="puzzled"> inspire. celebrate. create.
 </div>
 
 <br>
@@ -159,13 +159,13 @@ h2 {font-family: Georgia, serif;}
 
   <div class="row">
     <div class="imgcolumn">
-      <img src="candlepine.jpg" alt="christmas candles" style="width:100%">
+      <img src="redandgreendecor.jpg" alt="Christmas vase small" style="width:100%">
     </div>
     <div class="imgcolumn">
-      <img src="freshdecor.png" alt="christmas tree" style="width:100%">
+      <img src="vasedecor.jpg" alt="Christmas vase" style="width:100%">
     </div>
     <div class="imgcolumn">
-      <img src="wreath.jpg" alt="pine wreath" style="width:100%">
+      <img src="celfie.jpg" alt="celfie vase" style="width:100%">
     </div>
   </div>
   </div>
