--- a/2_market.html
+++ b/2_market.html
@@ -85,40 +85,66 @@
       <h2>Wednesday, December 4, 2019
       <br>11AM-1PM
       <br>5:30PM-7:30PM</h2>
-  </div>
-  <div class="column" style="font-family: Georgia, serif;">
-      <h2>Wednesday, December 11, 2019
-      <br>11AM-1PM
-      <br>5:30PM-7:30PM</h2>
-  </div>
-</div>
+<br>
 
 <div class="row">
   <div class="vendorcolumn" style="font-family: Georgia, serif;">
+<img src="logo.png">
       <h3>Haute House Studio</h3>
       <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
   </div>
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn" class="border" style="font-family: Georgia, serif;">
       <h3>Mary Jane Studio</h3>
       <p></p>
   </div>
   <div class="vendorcolumn" style="font-family: Georgia, serif;">
-      <h3>Haute House Studio</h3>
+      <h3>Edina Spiritwear</h3>
       <p>Fresh florals, house-poured candles, and custom gift-wrapping.</p>
   </div>
   <div class="vendorcolumn" style="font-family: Georgia, serif;">
-      <h3>Alice</h3>
+      <h3>Noon Day</h3>
       <p></p>
   </div>
 </div>
 
 <div class="row">
   <div class="vendorcolumn" style="font-family: Georgia, serif;">
-      <h3>Edina Spiritwear</h3>
+      <h3>Num Nuts</h3>
+      <p></p>
+  </div>
+  <div class="vendorcolumn" class="border" style="font-family: Georgia, serif;">
+      <h3>Freak Flag Foods</h3>
       <p></p>
   </div>
   <div class="vendorcolumn" style="font-family: Georgia, serif;">
-      <h3>Namakan Fur</h3>
+      <h3></h3>
+      <p></p>
+  </div>
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3></h3>
+      <p></p>
+  </div>
+</div>
+
+<br>
+
+</div>
+<div class="column" style="font-family: Georgia, serif;">
+    <h2>Wednesday, December 11, 2019
+    <br>11AM-1PM
+    <br>5:30PM-7:30PM</h2>
+</div>
+</div>
+
+<br>
+
+<div class="row">
+  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+      <h3>Haute House Studio</h3>
+      <p></p>
+  </div>
+  <div class="vendorcolumn" class="border" style="font-family: Georgia, serif;">
+      <h3>Alice</h3>
       <p></p>
   </div>
   <div class="vendorcolumn" style="font-family: Georgia, serif;">
@@ -133,30 +159,11 @@
 
 <div class="row">
   <div class="vendorcolumn" style="font-family: Georgia, serif;">
-      <h3>Noon Day</h3>
-      <p></p>
-  </div>
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
       <h3>Num Nuts</h3>
       <p></p>
   </div>
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
+  <div class="vendorcolumn" class="border" style="font-family: Georgia, serif;">
       <h3>Freak Flag Foods</h3>
-      <p></p>
-  </div>
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
-      <h3>Num Nuts</h3>
-      <p></p>
-  </div>
-</div>
-
-<div class="row">
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
-      <h3>Freak Flag Foods</h3>
-      <p></p>
-  </div>
-  <div class="vendorcolumn" style="font-family: Georgia, serif;">
-      <h3></h3>
       <p></p>
   </div>
   <div class="vendorcolumn" style="font-family: Georgia, serif;">
