--- a/5_order.html
+++ b/5_order.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-  <title>FRESH DECOR - HAUTE HOLIDAY</title>
+  <title>HOLIDAY DECOR - HAUTE HOLIDAY</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
