squared photos and changed to fuzzy blanket

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ h2 {font-family: Georgia, serif;}
     <img src="hotred.jpg" alt="holdingpresents" style="width:100%">
   </div>
   <div class="imgcolumn">
-    <img src="ideashouse.jpg" alt="blankets and pinecones" style="width:100%">
+    <img src="fuzzyblanket.jpg" alt="fuzzy fuzzyblanket" style="width:100%">
   </div>
 </div>
 </div>
