--- a/1-1_team.html
+++ b/1-1_team.html
@@ -30,6 +30,8 @@
 
   h1 {font-family: Georgia, serif;}
   h2 {font-family: Georgia, serif;}
+  h3 {font-family: Georgia, serif;}
+  h4 {font-family: Georgia, serif;}
 
   .hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("colorwreath.jpg");
@@ -58,29 +60,32 @@
     </div>
   </div>
 <br>
-<br>
+
 <div class="w3-container">
-<p class="padding">Haute House Studio is a boutique floral & event studio located in Minneapolis/St. Paul, Minnesota.
+<h4 style="text-align:left; padding: 5px 20px;">Haute House Studio is a boutique floral & event studio located in Minneapolis/St. Paul, Minnesota.
 We are known for our energy, enthusiasm, creativity, and attention to detail. We connect with our
 clients on a personal level, understand your vision, and then bring that vision to life in an amazing
-and memorable way.</p>
+and memorable way.</h4>
 </div>
 
 <div class="w3-container">
-<p class="padding">Meet the leaders behind our WOW-worthy floral and events...</p><br>
+<h2>Meet the leaders behind our WOW-worthy floral and events!</h2>
+
 </div>
 
 <div class="row">
   <div class="column">
+    <br>
+    <br>
     <img src="mb.jpg" alt="Marsha and Bridget" style="width:100%">
   </div>
   <div class="column">
     <h3>Bridget Connell</h3>
     <h4>Co-Owner &amp; Principal Event Designer/Planner</h4>
-    <p>Bridget's love of design started at a very young age - she started working as a  designer and fell in love with creating beautiful things from a variety of materials. This love of creation took a leap into yet another medium - fresh florals and event design. Now an award-winning florist and wedding/event planner, she is constantly pushing the envelope to try to create new and exciting designs that are unique, chic and elegant. But her favorite job of all is being wife to husband Pat and mom to kids Sam, Lauren and John.</p>
+    <p class="padding small">Bridget's love of design started at a very young age - she started working as a  designer and fell in love with creating beautiful things from a variety of materials. This love of creation took a leap into yet another medium - fresh florals and event design. Now an award-winning florist and wedding/event planner, she is constantly pushing the envelope to try to create new and exciting designs that are unique, chic and elegant. But her favorite job of all is being wife to husband Pat and mom to kids Sam, Lauren and John.</p>
     <h3>Marsha Hunt</h3>
     <h4>Co-Owner &amp; Principal Floral/Event Designer</h4>
-    <p>Marsha Hunt burst onto the floral design scene in 2003, winning two awards in her first design competition and has since won four ISES "Best of Minnesota" Star Awards for her floral and event design work. Prior to her floral career, Marsha honed her creative abilities as a consultant in new product/ packaging design and as a research chemist at General Mills & Dow Chemical, earning multiple design patents and awards. Besides loving flowers, the joy of her life is her family - husband Dan, daughter Marit, and son Devan.</p>
+    <p class="padding small">Marsha Hunt burst onto the floral design scene in 2003, winning two awards in her first design competition and has since won four ISES "Best of Minnesota" Star Awards for her floral and event design work. Prior to her floral career, Marsha honed her creative abilities as a consultant in new product/ packaging design and as a research chemist at General Mills & Dow Chemical, earning multiple design patents and awards. Besides loving flowers, the joy of her life is her family - husband Dan, daughter Marit, and son Devan.</p>
   </div>
 </div>
 
