video on order page

--- a/5_order.html
+++ b/5_order.html
@@ -60,7 +60,13 @@
 <div class="w3-container">
   <h1>Haute House Studio is renown for our
     <br>inspired and luxurious holiday design and decorating services.</h2>
-
+</div>
+<br>
+<div style="text-align:center;">
+    <iframe width="600" height="339" src="https://www.youtube.com/embed/kB1TnBfJomQ?controls=1" style="float:center">
+  </iframe>
+</div>
+<div>
   <p class="padding">Designers Marsha Hunt and Bridget Connell have been featured nationally on NBC Nightly News and in
   numerous regional media outlets such as KARE 11 TV, Edina Magazine, Midwest Home, Mpls-St. Paul Magazine,
   Southwest Metro Magazine and the Minneapolis Star Tribune.</p>
@@ -69,6 +75,7 @@
   and authentic greenery to create an opulent splendor for the holidays that will elevate your
   holiday decor to match that of your elegant home interior. Experience how beautiful and effortless
   the season can be.</p>
+</div>
 
   <div class="leftcolumn">
     <p>Learn more about our holiday design and decoration work.</p><br>
@@ -82,7 +89,6 @@
 </div>
 <div class="rightcolumn">
  <a href="https://www.hautehousestudio.com/orders" class="button">SEE MORE</a>
-
 </div>
 
 
