--- a/index.html
+++ b/index.html
@@ -184,23 +184,23 @@ h2 {font-family: Georgia, serif;}
 <br>
 
 
-<div class="footer">
+<footer>
   <h3 style="font-family: Georgia, serif;">
 HAUTE HOUSE STUDIO</h3>
   <div class="row">
-    <div class="column" style="font-family: Georgia, serif;">
+    <div class="footercolumn" style="font-family: Georgia, serif;">
         <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
         <br>(612) 730-1143
         <br> Hours by appointment
         <br>
     </div>
-    <div class="column" style="font-family: Georgia, serif;">
+    <div class="footercolumn" style="font-family: Georgia, serif;">
         5500 Lincoln Drive
         <br>Suite 150
         <br>Edina, MN 55436
         <br>
     </div>
-</div></div></div>
+</div></div></footer>
 
 <script>
 function myFunction() {
