--- a/2_market.html
+++ b/2_market.html
@@ -12,6 +12,7 @@
   <title>HOLIDAY MARKET - HAUTE HOLIDAY</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
