--- a/2_market.html
+++ b/2_market.html
@@ -40,6 +40,7 @@
 
     h1 {font-family: Georgia, serif;}
     h2 {font-family: Georgia, serif;}
+    h3 {font-family: Georgia, serif;}
 
     .hero-image {
       background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("sharingpresents.jpg");
