--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ body, html {
 
 h1 {font-family: Georgia, serif;}
 h2 {font-family: Georgia, serif;}
+h3 {font-family: Georgia, serif;}
 
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("brightparty.jpg");
