--- a/index.html
+++ b/index.html
@@ -97,18 +97,14 @@ h3 {font-family: Georgia, serif;}
   <div class="w3-container">
     <h2>HOLIDAY MARKET &amp; IDEAS HOUSE</h2>
 
-       <div class="leftcolumn"><h3>Local gifts made with love to celebrate those you love.</h3>
-          <p>In-studio and online throughout December.</p>
+      <h3>Local gifts made with love to celebrate those you love.</h3>
+          <div class="leftcolumn"> <p>In-studio and online throughout December.</p>
       </div>
-
       <div class="rightcolumn">
-        <br>
         <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="button">EXPLORE</a>
       </div>
     </div>
 
-<br>
-<br>
 
 <div class="row">
   <div class="imgcolumn">
