lora font added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <title>HAUTE HOLIDAY by Haute House Studio </title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,7 +42,8 @@ body, html {
 
 h1 {font-family: Georgia, serif;}
 h2 {font-family: Georgia, serif;}
-h3 {font-family: Georgia, serif;}
+h3 {font-family: 'Lora', serif;}
+
 
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("brightparty.jpg");
@@ -97,7 +99,7 @@ h3 {font-family: Georgia, serif;}
   <div class="w3-container">
     <h2>HOLIDAY MARKET &amp; IDEAS HOUSE</h2>
 
-      <h3>Local gifts made with love to celebrate those you love.</h3>
+      <h3 style="text-align:left;">Local gifts made with love to celebrate those you love.</h3>
           <div class="leftcolumn"> <p>In-studio and online throughout December.</p>
       </div>
       <div class="rightcolumn">
