google fonts etc
image folders
deleted some images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>HAUTE HOLIDAY by Haute House Studio </title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Lora|Montserrat:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,10 +40,10 @@ body, html {
   margin: 0;
 }
 
-h1 {font-family: Georgia, serif;}
-h2 {font-family: Georgia, serif;}
-h3 {font-family: 'Lora', serif;}
-
+h1 {font-family: 'Montserrat', sans-serif;}
+h2 {font-family: 'Montserrat', sans-serif; font-weight: bold;}
+h3 {font-family: 'Montserrat', sans-serif;}
+p {font-family: 'Lora', serif;}
 
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("brightparty.jpg");
@@ -68,17 +68,15 @@ h3 {font-family: 'Lora', serif;}
 
 <div class="hero-image">
   <div class="hero-text">
-    <h1 style="font-family: Arial, Helvetica, sans-serif; font-size:50px"><strong>HAUTE HOLIDAY</strong></h1>
-    <h2 style="font-family: Arial, Helvetica, sans-serif;">by
+    <h1><strong>HAUTE HOLIDAY</strong></h1>
+    <h2>by
         <br>Haute House Studio</h2>
   </div>
 </div>
 
 <div>
-<h1 class="puzzled"> inspire. celebrate. create.
+<h1 style="font-family: 'Alex Brush', cursive;"> inspire. celebrate. create.
 </div>
-
-<br>
 
 
     <div class="row">
@@ -93,7 +91,6 @@ h3 {font-family: 'Lora', serif;}
       </div>
     </div>
 
-<br>
 <br>
 
   <div class="w3-container">
@@ -121,7 +118,6 @@ h3 {font-family: 'Lora', serif;}
 </div>
 </div>
 
-<br>
 <br>
 
   <div class="w3-container">
@@ -152,7 +148,6 @@ h3 {font-family: 'Lora', serif;}
   </div>
 
 <br>
-<br>
 
   <div class="w3-container">
     <h2>HOLIDAY DECOR</h2>
@@ -182,22 +177,21 @@ h3 {font-family: 'Lora', serif;}
 
 <br>
 
-
 <footer>
-  <h3 style="font-family: Georgia, serif;">
+  <h3>
 HAUTE HOUSE STUDIO</h3>
   <div class="row">
-    <div class="column" style="font-family: Georgia, serif;">
-        <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
+    <div class="column">
+      <p><a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
         <br>(612) 730-1143
         <br> Hours by appointment
-        <br>
+        <br></p>
     </div>
-    <div class="column" style="font-family: Georgia, serif;">
-        5500 Lincoln Drive
+    <div class="column">
+        <p>5500 Lincoln Drive
         <br>Suite 150
         <br>Edina, MN 55436
-        <br>
+        <br></p>
     </div>
 </div></div></footer>
 
