photos borders fonts

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>HAUTE HOLIDAY by Haute House Studio </title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Lora|Montserrat:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat:400,700|Pinyon+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,10 +40,13 @@ body, html {
   margin: 0;
 }
 
-h1 {font-family: 'Montserrat', sans-serif;}
-h2 {font-family: 'Montserrat', sans-serif; font-weight: bold;}
-h3 {font-family: 'Montserrat', sans-serif;}
+h1 {font-family: 'Montserrat', sans-serif; text-align: center;}
+h2 {font-family: 'Montserrat', sans-serif; font-weight: bold; text-align: center;}
+h3 {font-family: 'Montserrat', sans-serif; text-align: center;}
+h4 {font-family: 'Montserrat', sans-serif;}
 p {font-family: 'Lora', serif;}
+
+img {border: 1px solid #edeae6;}
 
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("brightparty.jpg");
@@ -69,25 +72,24 @@ p {font-family: 'Lora', serif;}
 <div class="hero-image">
   <div class="hero-text">
     <h1><strong>HAUTE HOLIDAY</strong></h1>
-    <h2>by
-        <br>Haute House Studio</h2>
+    <h2>by</h2>
+    <img src="photos_index/hhs.png" alt="Haute House Studio" style="width:100%; border: none;">
   </div>
 </div>
 
 <div>
-<h1 style="font-family: 'Alex Brush', cursive;"> inspire. celebrate. create.
+<h1 style="font-family: 'Pinyon Script', cursive; font-size: 56px;"> inspire. celebrate. create.
 </div>
-
 
     <div class="row">
       <div class="imgcolumn">
-        <img src="sequins2.jpg" alt="sequins" style="width:100%">
+        <img src="photos_index/home/gifts.jpg" alt="christmas gifts" style="width:100%">
       </div>
       <div class="imgcolumn">
-        <img src="joy.jpg" alt="joy decoration" style="width:100%">
+        <img src="photos_index/home/red.jpg" alt="christmas present" style="width:100%">
       </div>
       <div class="imgcolumn">
-        <img src="colorwreath.jpg" alt="colorful wreath" style="width:100%">
+        <img src="photos_index/home/green.jpg" alt="holiday drinks" style="width:100%">
       </div>
     </div>
 
@@ -95,7 +97,6 @@ p {font-family: 'Lora', serif;}
 
   <div class="w3-container">
     <h2>HOLIDAY MARKET &amp; IDEAS HOUSE</h2>
-
       <h3 style="text-align:left;">Local gifts made with love to celebrate those you love.</h3>
           <div class="leftcolumn"> <p>In-studio and online throughout December.</p>
       </div>
@@ -103,17 +104,15 @@ p {font-family: 'Lora', serif;}
         <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="button">EXPLORE</a>
       </div>
     </div>
-
-
 <div class="row">
   <div class="imgcolumn">
-    <img src="blackcandle.jpg" alt="black candle" style="width:100%">
+    <img src="photos_index/mkt/blackcandle.jpg" alt="black candle" style="width:100%">
   </div>
   <div class="imgcolumn">
-    <img src="hotred.jpg" alt="holdingpresents" style="width:100%">
+    <img src="photos_index/mkt/giftwrap.jpg" alt="wrapping presents" style="width:100%">
   </div>
   <div class="imgcolumn">
-    <img src="fuzzyblanket.jpg" alt="fuzzy fuzzyblanket" style="width:100%">
+    <img src="photos_index/mkt/market.jpg" alt="pink and red christmas tree" style="width:100%">
   </div>
 </div>
 </div>
@@ -133,16 +132,15 @@ p {font-family: 'Lora', serif;}
           <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="button">EVENTS</a>
         </div>
   </div>
-
   <div class="row">
     <div class="imgcolumn">
-      <img src="whiteplates.jpg" alt="dining event" style="width:100%">
+      <img src="photos_index/events/event.jpg" alt="holiday party" style="width:100%">
     </div>
     <div class="imgcolumn">
-      <img src="eventdark.jpg" alt="classy event" style="width:100%">
+      <img src="photos_index/events/longdrinks.jpg" alt="pink drinks" style="width:100%">
     </div>
     <div class="imgcolumn">
-      <img src="grazetray.jpg" alt="graze tray" style="width:100%">
+      <img src="photos_index/events/yay.jpg" alt="confetti" style="width:100%">
     </div>
   </div>
   </div>
@@ -153,24 +151,21 @@ p {font-family: 'Lora', serif;}
     <h2>HOLIDAY DECOR</h2>
       <div class="leftcolumn">
         <p>Centerpieces, mantels, tree decor, and more curated specially for your space.
-        Or, spread the cheer and show gratitude to someone you love.</p>
-
+            Or, spread the cheer and show gratitude to someone you love.</p>
       </div>
-
       <div class="rightcolumn">
         <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="button">ORDER</a>
     </div>
   </div>
-
   <div class="row">
     <div class="imgcolumn">
-      <img src="redandgreendecor.jpg" alt="Christmas vase small" style="width:100%">
+      <img src="photos_index/smalldecor/redandgreendecor.jpg" alt="Christmas vase small" style="width:100%">
     </div>
     <div class="imgcolumn">
-      <img src="vasedecor.jpg" alt="Christmas vase" style="width:100%">
+      <img src="photos_index/smalldecor/vasedecor.jpg" alt="Christmas vase" style="width:100%">
     </div>
     <div class="imgcolumn">
-      <img src="celfie.jpg" alt="celfie vase" style="width:100%">
+      <img src="photos_index/smalldecor/celfie.jpg" alt="celfie vase" style="width:100%">
     </div>
   </div>
   </div>
@@ -184,14 +179,12 @@ HAUTE HOUSE STUDIO</h3>
     <div class="column">
       <p><a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
         <br>(612) 730-1143
-        <br> Hours by appointment
-        <br></p>
+        <br> Hours by appointment</p>
     </div>
     <div class="column">
         <p>5500 Lincoln Drive
         <br>Suite 150
-        <br>Edina, MN 55436
-        <br></p>
+        <br>Edina, MN 55436</p>
     </div>
 </div></div></footer>
 
