fonts for all pages

--- a/2_market.html
+++ b/2_market.html
@@ -12,7 +12,7 @@
   <title>HOLIDAY MARKET - HAUTE HOLIDAY</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat:400,700|Pinyon+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,9 +39,13 @@
       margin: 0;
     }
 
-    h1 {font-family: Georgia, serif;}
-    h2 {font-family: Georgia, serif;}
-    h3 {font-family: Georgia, serif;}
+    h1 {font-family: 'Montserrat', sans-serif; text-align: center;}
+    h2 {font-family: 'Montserrat', sans-serif; font-weight: bold; text-align: center;}
+    h3 {font-family: 'Montserrat', sans-serif; text-align: center;}
+    h4 {font-family: 'Montserrat', sans-serif;}
+    p {font-family: 'Lora', serif;}
+
+    img {border: 1px solid #edeae6;}
 
     .hero-image {
       background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("sharingpresents.jpg");
