--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ p {font-family: 'Lora', serif;}
 img {border: 1px solid #edeae6;}
 
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("brightparty.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("photos_index/brightparty.jpg");
   height: 70%;
   background-position: center;
   background-repeat: no-repeat;
